--- a/index.html
+++ b/index.html
@@ -64,20 +64,29 @@
         <section class="bicycles">
           <div class="line"></div>
 
-          <h2 class="bicycles__title theme">Велосипеды</h2>
+          <h2 class="title title_bicycles">Велосипеды</h2>
           <ul class="nav-block nav-block_bicycles">
             <li class="nav-block__wrapper">
-              <a href="#" class="nav-block__link_bicycles nav-block__link theme"
+              <a
+                id="way"
+                href="#"
+                class="nav-block__link_bicycles nav-block__link nav-block__link_bicycles_active"
                 >Шоссе</a
               >
             </li>
             <li class="nav-block__wrapper">
-              <a href="#" class="nav-block__link_bicycles nav-block__link theme"
+              <a
+                id="gravel"
+                href="#"
+                class="nav-block__link_bicycles nav-block__link"
                 >Грэвел</a
               >
             </li>
             <li class="nav-block__wrapper">
-              <a href="#" class="nav-block__link_bicycles nav-block__link theme"
+              <a
+                id="tt"
+                href="#"
+                class="nav-block__link_bicycles nav-block__link"
                 >TT</a
               >
             </li>
@@ -85,7 +94,7 @@
 
           <div class="slider_">
             <div class="slider__container_1">
-              <div class="bicycles__block-cards">
+              <!-- <div class="bicycles__block-cards">
                 <div class="bicycles__card bicycles__card_place-1">
                   <div class="bicycles__box-image">
                     <img
@@ -180,38 +189,38 @@
                   </div>
                   <p class="bicycles__model">Trek Domane SL-7</p>
                 </div>
-              </div>
-              <div class="ww">
-                <svg
-                  class="qq qq_active"
-                  width="4"
-                  height="4"
-                  viewBox="0 0 4 4"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="2" cy="2" r="2" fill="auto" /></svg
-                ><svg
-                  class="qq"
-                  width="4"
-                  height="4"
-                  viewBox="0 0 4 4"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="2" cy="2" r="2" fill="auto" /></svg
-                ><svg
-                  class="qq"
-                  width="4"
-                  height="4"
-                  viewBox="0 0 4 4"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="2" cy="2" r="2" fill="auto" />
-                </svg>
-              </div>
+              </div> -->
             </div>
+          </div>
+          <div class="ww">
+            <svg
+              class="qq qq_active"
+              width="4"
+              height="4"
+              viewBox="0 0 4 4"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="2" cy="2" r="2" fill="auto" /></svg
+            ><svg
+              class="qq"
+              width="4"
+              height="4"
+              viewBox="0 0 4 4"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="2" cy="2" r="2" fill="auto" /></svg
+            ><svg
+              class="qq"
+              width="4"
+              height="4"
+              viewBox="0 0 4 4"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="2" cy="2" r="2" fill="auto" />
+            </svg>
           </div>
         </section>
         <!-- <section class="first-block">
@@ -370,12 +379,12 @@
       </footer> -->
     </div>
     <template id="forms">
-      <div class="bicycles__block-cards"></div>
+      <div id="" class="bicycles__block-cards"></div>
       <div class="bicycles__card">
         <div class="bicycles__box-image">
           <img class="bicycles__image" src="#" alt="" />
         </div>
-        <p class="bicycles__model theme"></p>
+        <p class="bicycles__model"></p>
       </div>
     </template>
     <script src="./js/datacards.js"></script>
