--- a/index.html
+++ b/index.html
@@ -379,7 +379,10 @@
       </footer> -->
     </div>
     <template id="forms">
-      <div id="" class="bicycles__block-cards"></div>
+      <div id="" class="bicycles__block-cards">
+        <div class="bicycles__icon-navigation_left"></div>
+        <div class="bicycles__icon-navigation_right"></div>
+      </div>
       <div class="bicycles__card">
         <div class="bicycles__box-image">
           <img class="bicycles__image" src="#" alt="" />
